// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`action$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$action as _$$action } from "thaler/server";
import { action$ } from 'thaler';
const _action$ = _$$action("/example/f0b3b6fa-index-0-example", async ({
  greeting,
  receiver
}) => {
  const message = greeting + ', ' + receiver + '!';
  return message;
});
const example = _$$clone(_action$);"
`;

exports[`action$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$action as _$$action } from "thaler/client";
import { action$ } from 'thaler';
const _action$ = _$$action("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_action$);"
`;

exports[`custom server function > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$scope as _$$scope } from "thaler/server";
import { $$example as _$$example } from "example-server-function/server";
import { example$ } from 'example-server-function';
const _example$ = _$$example("/example/f0b3b6fa-index-0-example", () => {
  const [greeting, receiver] = _$$scope();
  const message = greeting + ', ' + receiver + '!';
  return message;
});
function exampleProgram() {
  const greeting = 'Hello';
  const receiver = 'World';
  const example = _$$clone(_example$, () => [greeting, receiver]);
}"
`;

exports[`custom server function > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$example as _$$example } from "example-server-function/client";
import { example$ } from 'example-server-function';
const _example$ = _$$example("/example/f0b3b6fa-index-0-example");
function exampleProgram() {
  const greeting = 'Hello';
  const receiver = 'World';
  const example = _$$clone(_example$, () => [greeting, receiver]);
}"
`;

exports[`fn$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$fn as _$$fn } from "thaler/server";
import { fn$ } from 'thaler';
const PREFIX = 'Message: ';
const _fn$ = _$$fn("/example/f0b3b6fa-index-0-example", ({
  greeting,
  receiver
}) => {
  const message = PREFIX + greeting + ', ' + receiver + '!';
  return message;
});
const example = _$$clone(_fn$, () => []);"
`;

exports[`fn$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$fn as _$$fn } from "thaler/client";
import { fn$ } from 'thaler';
const PREFIX = 'Message: ';
const _fn$ = _$$fn("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_fn$, () => []);"
`;

exports[`fn$ > should transform with local scope 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$scope as _$$scope } from "thaler/server";
import { $$fn as _$$fn } from "thaler/server";
import { fn$ } from 'thaler';
const _fn$ = _$$fn("/example/f0b3b6fa-index-0-example", ({
  greeting,
  receiver
}) => {
  const [PREFIX] = _$$scope();
  const message = PREFIX + greeting + ', ' + receiver + '!';
  return message;
});
function test() {
  const PREFIX = 'Message: ';
  const example = _$$clone(_fn$, () => [PREFIX]);
}"
`;

exports[`fn$ > should transform with local scope 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$fn as _$$fn } from "thaler/client";
import { fn$ } from 'thaler';
const _fn$ = _$$fn("/example/f0b3b6fa-index-0-example");
function test() {
  const PREFIX = 'Message: ';
  const example = _$$clone(_fn$, () => [PREFIX]);
}"
`;

exports[`get$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$get as _$$get } from "thaler/server";
import { get$ } from 'thaler';
const _get$ = _$$get("/example/f0b3b6fa-index-0-example", ({
  greeting,
  receiver
}) => {
  const message = greeting + ', ' + receiver + '!';
  return new Response(message, {
    headers: {
      'content-type': 'text/html'
    },
    status: 200
  });
});
const example = _$$clone(_get$);"
`;

exports[`get$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$get as _$$get } from "thaler/client";
import { get$ } from 'thaler';
const _get$ = _$$get("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_get$);"
`;

exports[`loader$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$loader as _$$loader } from "thaler/server";
import { loader$ } from 'thaler';
const _loader$ = _$$loader("/example/f0b3b6fa-index-0-example", async ({
  greeting,
  receiver
}) => {
  const message = greeting + ', ' + receiver + '!';
  return message;
});
const example = _$$clone(_loader$);"
`;

exports[`loader$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$loader as _$$loader } from "thaler/client";
import { loader$ } from 'thaler';
const _loader$ = _$$loader("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_loader$);"
`;

exports[`post$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$post as _$$post } from "thaler/server";
import { post$ } from 'thaler';
const _post$ = _$$post("/example/f0b3b6fa-index-0-example", ({
  greeting,
  receiver
}) => {
  const message = greeting + ', ' + receiver + '!';
  return new Response(message, {
    headers: {
      'content-type': 'text/html'
    },
    status: 200
  });
});
const example = _$$clone(_post$);"
`;

exports[`post$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$post as _$$post } from "thaler/client";
import { post$ } from 'thaler';
const _post$ = _$$post("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_post$);"
`;

exports[`pure$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$pure as _$$pure } from "thaler/server";
import { pure$ } from 'thaler';
const sleep = ms => new Promise(res => {
  setTimeout(res, ms, true);
});
const _pure$ = _$$pure("/example/f0b3b6fa-index-0-example", async ({
  greeting,
  receiver
}) => {
  await sleep(1000);
  const message = greeting + ', ' + receiver + '!';
  return message;
});
const example = _$$clone(_pure$);"
`;

exports[`pure$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$pure as _$$pure } from "thaler/client";
import { pure$ } from 'thaler';
const sleep = ms => new Promise(res => {
  setTimeout(res, ms, true);
});
const _pure$ = _$$pure("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_pure$);"
`;

exports[`ref$ > should transform 1`] = `
"import { $$ref as _$$ref } from "thaler/server";
import { ref$ } from 'thaler';
const example = _$$ref("/example/f0b3b6fa-index-0", () => 'Hello World');"
`;

exports[`ref$ > should transform 2`] = `
"import { $$ref as _$$ref } from "thaler/client";
import { ref$ } from 'thaler';
const example = _$$ref("/example/f0b3b6fa-index-0", () => 'Hello World');"
`;

exports[`server$ > should transform 1`] = `
"import { $$clone as _$$clone } from "thaler/server";
import { $$server as _$$server } from "thaler/server";
import { server$ } from 'thaler';
const _server$ = _$$server("/example/f0b3b6fa-index-0-example", request => {
  return new Response('Hello World', {
    headers: {
      'content-type': 'text/html'
    },
    status: 200
  });
});
const example = _$$clone(_server$);"
`;

exports[`server$ > should transform 2`] = `
"import { $$clone as _$$clone } from "thaler/client";
import { $$server as _$$server } from "thaler/client";
import { server$ } from 'thaler';
const _server$ = _$$server("/example/f0b3b6fa-index-0-example");
const example = _$$clone(_server$);"
`;
